<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        android:layout_margin="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryCardColor"
            android:padding="16dp">

            <TextView
                android:id="@+id/textRoundName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/round_name"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/textRoundName"
                android:text="@string/dot"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textGroupNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textDot"
                android:text="@string/group_number"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textGameNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/game_number_one"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textPlayerOneName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textGroupNumber"
                android:text="@string/player_one_name"
                android:textColor="@color/player_name_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textPlayerTwoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textPlayerOneName"
                android:text="@string/player_two_name"
                android:textColor="@color/player_name_color"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textGameNumber"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_score"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primaryTextColorHint"/>

                <EditText
                    android:id="@+id/inputScore2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_score"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primaryTextColorHint"/>

                <EditText
                    android:id="@+id/inputScore3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_score"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primaryTextColorHint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputPlayer2Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_score"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primaryTextColorHint"/>

                <EditText
                    android:id="@+id/inputPlayer2Score2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_score"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primaryTextColorHint" />

                <EditText
                    android:id="@+id/inputPlayer2Score3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_score"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/primaryTextColorHint"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>